src/objects/Flow_Session_Setting__mdt.object
<CustomObject>
    <description>Stores the metadata on how the Flow Session runs.
E.g. if it requires Two Factor Authentication or if it&apos;s in Maintenance, etc.</description>
    <fields>
        <fullName>Boolean_Value__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The value of the Configuration, e.g. if 2FA is &apos;Checked&apos; then it is on</description>
        <inlineHelpText>The value of the Configuration. Checked is true, unchecked is false</inlineHelpText>
        <label>Boolean Value</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Configuration_Name__c</fullName>
        <label>Configuration Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Time_Value__c</fullName>
        <label>Date Time Value</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Value__c</fullName>
        <label>Date Value</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Flow_API_Name__c</fullName>
        <description>The Flow which this setting is for</description>
        <inlineHelpText>The Flow API name this setting belongs to. If the flow was named &apos;My Flow&apos;, the API name would be &apos;My_Flow&apos; by default</inlineHelpText>
        <label>Flow API Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_Value__c</fullName>
        <label>Number Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Text_Value__c</fullName>
        <label>Text Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Flow Session Setting</label>
    <listViews>
        <fullName>All</fullName>
        <columns>MasterLabel</columns>
        <columns>Flow_API_Name__c</columns>
        <columns>DeveloperName</columns>
        <columns>Configuration_Name__c</columns>
        <columns>Boolean_Value__c</columns>
        <columns>Text_Value__c</columns>
        <columns>Number_Value__c</columns>
        <columns>Date_Value__c</columns>
        <columns>Date_Time_Value__c</columns>
        <columns>IsProtected</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <pluralLabel>Flow Session Settings</pluralLabel>
</CustomObject>